# cura-build-environment

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.centos  Jenkinsfile  Note.md  README.md  conanfile.py  conanfile.txt  env_osx.sh  env_win32.bat  env_win64.bat  xstartup
.github/workflows/: build-linux.sh  build-macOS.sh  build.ps1  build.sh  cicd.yml  release.yml
cmake/: BuildPlatformDetection.cmake  GetFromEnvironmentOrCache.cmake  Python.cmake  appimagekit.cmake  apprun-attr.cmake  common-cpackconfig.cmake  conan.cmake  create-appimage.cmake  create-dmg.cmake  dev.cmake  installer-filename.cmake  macos-create-dmg.cmake  macos-notarize-dmg.cmake  macos-sign-dmg.cmake  macoscreatedmg.cmake  macossigninstaller.cmake  notarize-dmg.cmake  nsis.cmake  os.cmake  pyinstaller.cmake  sign-appimage.cmake  sign-dmg.cmake
devel/: astroid.cmake  cppunit.cmake  isort.cmake  mypy.cmake  py.cmake  pylint.cmake  pytest.cmake  typed-ast.cmake
docker/: build.sh
docker/linux/: .env  Dockerfile  Dockerfile.centos  Dockerfile.debian  build.sh  build_centos.sh  docker-compose.yml  entrypoint.sh  entrypoint_centos.sh
docker/linux/base/: Dockerfile  conanfile.txt  profile
docker/linux/clang/: Dockerfile
docker/linux/gcc/: .dockerignore  Dockerfile
docker/windows/: Dockerfile  Dockerfile-base.vs2015  Dockerfile-base.vs2019  Dockerfile-build.vs2015  Dockerfile-build.vs2019  Dockerfile.vs2015  build_vs2015.cmd  build_vs2019.cmd  install_vs2019_buildtools.cmd  install_wixtoolset.ps1  setup_envvars.ps1
packaging/: AppRun  cura.desktop.in  cura.sh
packaging/NSIS/: Ultimaker-Cura.nsi.jinja  nsis-configurator.py
projects/: 0001-bpo-45433-Do-not-link-libpython-against-libcrypt-GH-.patch  0002-install-location-runtime-libs.patch  appimagekit.cmake  arcus.cmake  base_requirements.txt  boost_headers.cmake  build_numpy.bat  build_python_windows.bat  bzip2.cmake  bzip2_Makefile-libbz2_so  bzip2_shared.patch  charon.cmake  clipper.cmake  clipper_cmakelists_patch.txt  cura-binary-data.cmake  cura.cmake  curaengine.cmake  cxfreeze.cmake  cxfreeze_exclude_a.patch  cxfreeze_exclude_self.patch  fdm_materials.cmake  geos.cmake  googletest.cmake  install_python_windows.bat  libffi.cmake  libnest2d.cmake  libnest2d_find_clipper.cmake  libxml.cmake  libxslt.cmake  lxml.cmake  nlopt.cmake  numpy-stl.cmake  numpy.cmake  numpy_distutils_gfortran.patch  openblas.cmake  openctm.cmake  openssl.cmake  protobuf.cmake  pyinstaller.cmake  pyinstaller_win.cmake  (+42 more)
projects/requirements/: requirements_default.txt  requirements_numpy.txt  requirements_scipy.txt  requirements_shapely.txt
